changed index in FR version

--- a/versionFR.html
+++ b/versionFR.html
@@ -11,7 +11,7 @@
   </head>
   <body>
     <nav id="desktop-nav">
-      <div class="logo"><a href="indexEN.html">EN</div>
+      <div class="logo"><a href="index.html">EN</div>
       <div>
         <ul class="nav-links">
           <li><a href="#aboutfr">A propos</a></li>
