--- a/index.html
+++ b/index.html
@@ -11,7 +11,7 @@
   </head>
   <body>
     <nav id="desktop-nav">
-      <div class="logo"><a href="indexFR.html">FR</a></div>
+      <div class="logo"><a href="versionFR.html">FR</a></div>
       <div>
         <ul class="nav-links">
           <li><a href="#about">About</a></li>
@@ -294,9 +294,9 @@
               <img src="assets/Projet3-Citron.png" alt="project 3" class="project-img">
             </div>
             <h2 class="experience-sub-title project-title">Citron - Pico 8</h2>
-            <!-- <div class="btn-container">
+            <div class="btn-container">
               <button class="btn btn-color-2 project-btn" onclick="location.href='assets/pico8.mp4'">Live Demo</button>
-            </div> -->
+            </div>
           </div>
         </div>
       </div>
